# activity-rs

./: Cargo.toml  README.md
assets/: mime.txt
src/: activity.rs  main.rs
src/components/: content.rs  footer.rs  header.rs  mod.rs
