[package]
name = "activity-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = "0.3.2"
rand = "0.8.5"
thiserror = "1.0.40"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
dioxus-desktop = "0.3.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
dioxus-web = "0.3.2"
getrandom = { version = "0.2.9", features = ["js"] }

